src/objects/loan__Investor_Loan__c.object
<CustomObject>
    <description>This is a conjunction object to keep many to many relationships for loans and accounts (Investor)</description>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This will be look up from Account</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only investors should be selected.</errorMessage>
            <filterItems>
                <field>Account.loan__Investor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Investment Orders</relationshipLabel>
        <relationshipName>Investors_Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Certificate_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The certificate rate for this investment. This is the rate which will be payable to the investor who buys invested in this loan and is entitled to its receivable stream.</description>
        <inlineHelpText>This is the rate of Interest earned by the investor.</inlineHelpText>
        <label>Certificate Rate</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Date__c</fullName>
        <description>Datetime when IO is written off.</description>
        <label>Charged Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due fee will be stored in this field when IO is written off.</description>
        <inlineHelpText>If the loan is not repaid and the concerned Financial Institution decides to write off or charge off the loan, the snapshot of Fee is stored here.</inlineHelpText>
        <label>Charged Off Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accrued Interest will go into Charged Off Interest</description>
        <inlineHelpText>If the loan is not repaid and the concerned Financial Institution decides to write off or charge off the loan, the snapshot of Interest is stored here.</inlineHelpText>
        <label>Charged Off Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>When IO is written off Remaining Investment Amount goes into this.</description>
        <inlineHelpText>If the loan is not repaid and the concerned Financial Institution decides to write off or charge off the loan, the snapshot of Principal is stored here.</inlineHelpText>
        <label>Charged Off Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Enabled_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Shows if the record is enabled.</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Income_Reinvested__c</fullName>
        <formula>loan__Interest_Reinvested__c -  loan__Reinvest_Service_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income Reinvested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Amount_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Interest Amount paid on this investment.</description>
        <label>Interest Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Balance__c</fullName>
        <formula>loan__Inv_Interest_Posted_Amt__c -  loan__Interest_Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Disbursed_To_Investor__c</fullName>
        <label>Interest Disbursed (To Investor)</label>
        <summarizedField>loan__Investor_Loan_Account_Txns__c.loan__Interest_Paid__c</summarizedField>
        <summaryFilterItems>
            <field>loan__Investor_Loan_Account_Txns__c.loan__Txn_Code__c</field>
            <operation>equals</operation>
            <value>PAYMENT RELEASE, PRINCIPAL REINVESTED</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Loan_Account_Txns__c.loan__Reinvest_Interest__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Investor_Loan_Account_Txns__c.loan__Investor_Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Rate_On_Loan_Account__c</fullName>
        <description>Interest Rate On Loan account</description>
        <label>Interest Rate On Loan</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Reinvested__c</fullName>
        <label>Interest Reinvested No Service</label>
        <summarizedField>loan__Investor_Loan_Account_Txns__c.loan__Interest_Paid__c</summarizedField>
        <summaryFilterItems>
            <field>loan__Investor_Loan_Account_Txns__c.loan__Reinvest_Interest__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Loan_Account_Txns__c.loan__Txn_Code__c</field>
            <operation>equals</operation>
            <value>INTEREST REINVESTED, PRINCIPAL &amp; INTEREST REINVESTED</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Investor_Loan_Account_Txns__c.loan__Investor_Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Inv_Accrued_Interest_Amt__c</fullName>
        <description>Payable Accrued Interest amount to investor</description>
        <inlineHelpText>This is the accrued Interest amount payable to the investor</inlineHelpText>
        <label>Accrued Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Inv_Interest_Posted_Amt__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Interest Posted on account, this will be updated when the payment amount is being calculated.</description>
        <label>Interest Posted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Inv_Last_Interest_Accrual_Post_Date__c</fullName>
        <description>Last Interest accrual Posted</description>
        <label>Last Interest Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Investment_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Investment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Investor_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Investor_Loan_ID__c</fullName>
        <displayFormat>ILID-{0000000000}</displayFormat>
        <label>Investor Loan ID ( Deprecated )</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>loan__Investor_Start_Date__c</fullName>
        <description>Start date of the Investor</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Late_Fees_Amount_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Fees Paid on this account.</description>
        <label>Fees Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Delinquent_Days__c</fullName>
        <description>Number_of_Days_Overdue__c on loan account</description>
        <label>Created Loan Delinquent Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Principal_Remaining__c</fullName>
        <label>Created Loan Principal Remaining</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Start_Date__c</fullName>
        <formula>loan__Loan__r.loan__Disbursal_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Status__c</fullName>
        <description>Loan_Status__c on loan account</description>
        <label>Created Loan Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is a look up value from Loan</description>
        <label>Loan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Loan_Account__c.loan__Loan_Status__c</field>
                <operation>notContain</operation>
                <value>Pending Approval, Approved, Canceled, Partial Application</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Investment Orders</relationshipLabel>
        <relationshipName>Investors_Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Minimum_Service_Fee__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Minimum Service Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Original_Loan_Amount__c</fullName>
        <formula>loan__Loan__r.loan__Loan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual Loan amount.</inlineHelpText>
        <label>Original Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Amount_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Principal Amount Paid back to Investor.</description>
        <label>Principal Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Disbursed_To_Investor__c</fullName>
        <label>Principal Disbursed (To Investor)</label>
        <summarizedField>loan__Investor_Loan_Account_Txns__c.loan__Principal_Paid__c</summarizedField>
        <summaryFilterItems>
            <field>loan__Investor_Loan_Account_Txns__c.loan__Txn_Code__c</field>
            <operation>equals</operation>
            <value>PAYMENT RELEASE, INTEREST REINVESTED</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Loan_Account_Txns__c.loan__Reinvest_Principal__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Investor_Loan_Account_Txns__c.loan__Investor_Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Reinvested__c</fullName>
        <label>Principal Reinvested</label>
        <summarizedField>loan__Investor_Loan_Account_Txns__c.loan__Principal_Paid__c</summarizedField>
        <summaryFilterItems>
            <field>loan__Investor_Loan_Account_Txns__c.loan__Reinvest_Principal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Loan_Account_Txns__c.loan__Txn_Code__c</field>
            <operation>equals</operation>
            <value>PRINCIPAL REINVESTED, PRINCIPAL &amp; INTEREST REINVESTED</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Investor_Loan_Account_Txns__c.loan__Investor_Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Reinvest_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if Interest should be reinvested or not when Investor Payout is done.</description>
        <label>Reinvest Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Reinvest_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if principal should be reinvested or not when Investor payout is done.</description>
        <label>Reinvest Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Reinvest_Service_Charge__c</fullName>
        <inlineHelpText>This field stores the total service charge for reinvested transactions.</inlineHelpText>
        <label>Reinvest Service Charge</label>
        <summarizedField>loan__Investor_Loan_Account_Txns__c.loan__Total_Service_Charge__c</summarizedField>
        <summaryFilterItems>
            <field>loan__Investor_Loan_Account_Txns__c.loan__Reinvest_Interest__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Loan_Account_Txns__c.loan__Txn_Code__c</field>
            <operation>equals</operation>
            <value>INTEREST REINVESTED, PRINCIPAL &amp; INTEREST REINVESTED</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Investor_Loan_Account_Txns__c.loan__Investor_Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Remaining_Investment_Amount__c</fullName>
        <description>shows remaining investment amount for investment order.</description>
        <formula>loan__Investment_Amount__c -  loan__Principal_Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Service_Charge_On_Full_Payment_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Charge On Full Payment Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Service_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>On this rate service charge will be charged to the investors for servicing loans, making note payments and maintaining the accounts.
The service charge paid by investors is on all amounts paid by the borrowers.</description>
        <inlineHelpText>Is the %age of the certificate rate which is earned by the P2P platform.</inlineHelpText>
        <label>Interest Service Rate</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Share__c</fullName>
        <description>Describes the percent share of Investor in Loan amount</description>
        <label>Share</label>
        <precision>10</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Share_rounded__c</fullName>
        <formula>loan__Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Status__c</fullName>
        <description>Describes whether the record is in Active or Inactive state</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Written Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Total_Amount_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Amount paid back to Investor</description>
        <label>Total Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Unreleased_Interest__c</fullName>
        <description>Field calculates unreleased Interest.</description>
        <formula>loan__Interest_Amount_Paid__c -  loan__Interest_Disbursed_To_Investor__c -  loan__Interest_Reinvested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field calculates unreleased Interest.</inlineHelpText>
        <label>Unreleased Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Unreleased_Principal__c</fullName>
        <description>Fields calculates Unreleased principal for investment order.</description>
        <formula>loan__Principal_Amount_Paid__c -  loan__Principal_Disbursed_To_Investor__c -  loan__Principal_Reinvested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Fields calculates Unreleased principal for investment order.</inlineHelpText>
        <label>Unreleased Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Write_Off_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Amount which is written off for investment order.</description>
        <inlineHelpText>Amount to write off from Investment order.</inlineHelpText>
        <label>Write Off Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Investment_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investment Booking</label>
        <referenceTo>peer__Investment_Booking__c</referenceTo>
        <relationshipLabel>Investment Orders</relationshipLabel>
        <relationshipName>Investment_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Number_of_Shares__c</fullName>
        <formula>loan__Investment_Amount__c  /  loan__Loan__r.peer__Note_Type__r.peer__Denomination__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Shares</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Sale_Date__c</fullName>
        <inlineHelpText>Date on which selling of investment order took place</inlineHelpText>
        <label>Sale Date</label>
        <type>Date</type>
    </fields>
    <label>Investment Order</label>
    <nameField>
        <displayFormat>ILID-{0000000000}</displayFormat>
        <label>Investor Loan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Available_Funds_check</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; loan__Investment_Amount__c &gt; loan__Account__r.loan__Undeployed_Funds__c</errorConditionFormula>
        <errorMessage>Investor can not invest more than Available Funds.</errorMessage>
    </validationRules>
</CustomObject>